Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1426

axutil_hash_set() usage require cast (warning on AIX)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • 1.6.0
    • 1.7.0
    • httpd module, xml/parser
    • None
    • AIX 5.2
      Visual Age C++
      ./configure CC=cc CFLAGS=-qnolm CXX=xlC CXXFLAGS=-qnolm --enable-guththila=yes

    Description

      Warnings are reported by Visual Age C++ on the usage of function axutil_hash_set().

      Directory axiom/src/xpath:
      cc -qlanglvl=extc89 -DHAVE_CONFIG_H -I. -I../.. -I../../include -I../../src/parser -I../../src/om -I ../../../util/include -I ../../../include -g -D_LARGEFILE64_SOURCE -c -M xpath.c -DPIC -o .libs/xpath.o
      "xpath.c", line 134.74: 1506-280 (W) Function argument assignment between types "const void*" and "int(struct axiom_xpath_context*,int)" is not allowed.
      "xpath.c", line 146.14: 1506-068 (W) Operation between types "int(struct axiom_xpath_context*,int)" and "void*" is not allowed.

      line 134: axutil_hash_set(context->functions, name, AXIS2_HASH_KEY_STRING, func);
      line 146: func = axutil_hash_get(context->functions, name, AXIS2_HASH_KEY_STRING);

      Directory src/modules/mod_addr:
      cc -qlanglvl=extc89 -DHAVE_CONFIG_H -I. -I../../.. -I../../../include -I../../../src/core/description -I../../../src/core/context -I../../../src/core/phaseresolver -I../../../src/core/engine -I../../../src/core/deployment -I../../../util/include -I../../../axiom/include -D_LARGEFILE64_SOURCE -DAXIS2_GUTHTHILA_ENABLED -DAXIS2_SVR_MULTI_THREADED -g -D_LARGEFILE64_SOURCE -DAXIS2_GUTHTHILA_ENABLED -DAXIS2_SVR_MULTI_THREADED -c -M mod_addr.c -DPIC -o .libs/mod_addr.o
      "mod_addr.c", line 112.44: 1506-280 (W) Function argument assignment between types "const void*" and "struct axis2_handler*(const struct axutil_env*,struct axutil_string*)" is not allowed.
      "mod_addr.c", line 115.44: 1506-280 (W) Function argument assignment between types "const void*" and "struct axis2_handler*(const struct axutil_env*,struct axutil_string*)" is not allowed.

      axutil_hash_set(module->handler_create_func_map, ADDR_IN_HANDLER,
      AXIS2_HASH_KEY_STRING, axis2_addr_in_handler_create);

      axutil_hash_set(module->handler_create_func_map, ADDR_OUT_HANDLER,
      AXIS2_HASH_KEY_STRING, axis2_addr_out_handler_create);

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              dolmen-oxymel Olivier Mengué
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: