AXIS2C-1426 axutil_hash_set() usage require cast (warning on AIX)